<resources>
    <string name="app_name">Wolne Lektury</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_header">Lista utworów</string>
    <string name="description_bookmark">bookmark</string>
    <string name="description_cover">book\'s cover</string>
    <string name="menu_item_title_profile">Profile</string>
    <string name="menu_item_title_login">Login</string>
    <string name="menu_item_title_favorite">Ulubione</string>
    <string name="text_long_about">API serwisu WolneLektury.pl znajduje się pod adresem https://wolnelektury.pl/api/. Za jego pomocą można uzyskać informacje o utworach, ich fragmentach i metadanych. Dane domyślnie są serializowane w formacie JSON, ale dostępny jest też format XML – wystarczy dodać parametr ?format=xml do każdego zapytania. API Wolnych Lektur zawiera następujące adresy URL: /api/books/ – Wszystkie utwory /api/audiobooks/ – Audiobooki /api/daisy/ – DAISY /api/authors/ – Lista autorów /api/epochs/ – Lista epok /api/genres/ – Lista gatunków literackich /api/kinds/ – Lista rodzajów literackich /api/themes/ – Lista motywów i tematów literackich /api/collections/ – Kolekcje Każdy element na tych listach zawiera adres (w atrybucie „href”), pod którym można znaleźć szczegółowe dane, np. /api/books/studnia-i-wahadlo/ czy /api/authors/edgar-allan-poe/. Można łączyć autorów, epoki, gatunki i rodzaje, aby wybrać tylko utwory odpowiadające zadanym kryteriom. Na przykład: /api/authors/adam-mickiewicz/kinds/liryka/books/. Aby spośród wszystkich pasujących wybrać tylko utwory najwyższego poziomu (pomijając ich podutwory), można użyć zapytania /parent_books/, np.: /api/authors/adam-mickiewicz/kinds/liryka/parent_books/. W ten sam sposób, filtrując dodatkowo według lektur lub motywów, można wyszukiwać fragmenty:/api/authors/william-shakespeare/themes/zabawa/fragments/. Każdy element uzyskanej listy w atrybucie „href” zawiera link do szczegółowego opisu danego fragmentu, np.: .</string>
    <string name="menu_item_title_about">About</string>
    <string name="text_user_name">Hubert Lukomski</string>
    <string name="text_user_email">hubert.omski@gmail.com</string>
    <string name="text_menu_part_user">Użytkownik</string>
    <string name="menu_item_title_bookmarks">Zakładki</string>
    <string name="menu_item_title_list">Lista</string>
    <string name="menu_title_books">Książki</string>
    <string name="menu_item_title_books">książki</string>
    <string name="menu_item_title_audiobooks">Audiobooki</string>
    <string name="menu_item_title_categories">Kategorie</string>
    <string name="text_bookdetails_citate">Cytat:</string>
</resources>